# crabpy_pyramid

./: .flake8  .gitignore  .travis.yml  CHANGES.rst  CHANGES.txt  LICENSE  MANIFEST.in  README.md  README.rst  README.txt  development.ini  development_talissa.ini  nose_development.ini  nose_travis.ini  production.ini  pyproject.toml  requirements-dev.txt  requirements-rtd.txt  requirements-tci.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: backend.yaml
crabpy_pyramid/: __init__.py  adressenregister.py  capakey.py  renderers.py  routes.py  tests.py  utils.py  views.py
crabpy_pyramid/renderers/: __init__.py  adressenregister.py  capakey.py  crab.py
crabpy_pyramid/routes/: adressenregister.py  capakey.py  crab.py
crabpy_pyramid/templates/: mytemplate.pt
crabpy_pyramid/tests/: test_capakey.py  test_crab.py  test_functional.py  test_utils.py  tests.py
crabpy_pyramid/tests/fixtures/: adressenregister.py
crabpy_pyramid/tests/renderers/: test_capakey.py
crabpy_pyramid/views/: adressenregister.py  capakey.py  crab.py  exceptions.py  utils.py
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst  services.rst  setup.rst
env/local/: include
tests/: test_capakey.py  test_functional.py  test_utils.py
tests/fixtures/: adressenregister.py
tests/renderers/: test_capakey.py
